--- a/src/main/resources/templates/common/shoulder_fragment.html
+++ b/src/main/resources/templates/common/shoulder_fragment.html
@@ -46,12 +46,11 @@
 
   <!-- ======= フラグメント::Header ======= -->
   <header th:fragment="header" id="header" class="header fixed-top d-flex align-items-center">
-
     <div class="d-flex align-items-center justify-content-between">
       <a href="/home/" class="logo d-flex align-items-center">
-        <span class="d-none d-lg-block">SNSサイト</span>
+        <img src="/assets/img/logo.png" alt="">
+        <span class="d-none d-lg-block">SNS</span>
       </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
     <nav class="header-nav ms-auto">
@@ -66,13 +65,14 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">佐藤太郎</span>
+            <!--/* タイムスタンプをURLパラメータに指定している理由は、更新直後ブラウザキャッシュにより表示されないことがある為、設定している。 */-->
+            <img th:src="(*{users.iconUri} ? ${@storageService.getDataUri(users.iconUri)} : '/assets/img/profile-dummy.png')" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2" th:text='${users.name}'>佐藤太郎</span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>佐藤太郎</h6>
+              <h6 th:text='${users.name}'>佐藤太郎</h6>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -89,7 +89,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="/">
+              <a class="dropdown-item d-flex align-items-center" href="/logout">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>ログアウト</span>
               </a>
@@ -100,41 +100,8 @@
 
       </ul>
     </nav><!-- End Icons Navigation -->
-
-  </header>
+  </header><!-- End Header -->
   <!-- ======= /フラグメント::Header ======= -->
-
-
-  <!-- ======= フラグメント::Sidebar ======= -->
-  <aside th:fragment="sidebar" id="sidebar" class="sidebar">
-
-    <ul class="sidebar-nav" id="sidebar-nav">
-
-      <li class="nav-item">
-        <a class="nav-link " href="/home/">
-          <i class="bi bi-house-door"></i>
-          <span>Home</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="/profile/">
-          <i class="bi bi-person"></i>
-          <span>プロフィール</span>
-        </a>
-      </li><!-- End Profile Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="/friend/list">
-          <i class="bi bi-people"></i>
-          <span>フレンド</span>
-        </a>
-      </li><!-- End F.A.Q Page Nav -->
-
-    </ul>
-
-  </aside>
-  <!-- ======= フラグメント::Sidebar ======= -->
 
 
   <!-- ======= ショルダー（ヘッダー、フッター）デザイン確認用のサンプルボディ ======= -->
@@ -143,9 +110,9 @@
       <h1>※ショルダー確認用サンプルタイトル</h1>
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
+    <section class="section">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
 
           <div class="card">
             <div class="card-body">
@@ -161,6 +128,8 @@
 
 
   <!-- ======= フラグメント::Footer ======= -->
+  <!-- 【※注意！！】 実際にサーバにアップし、自身で利用する際は、下記「NiceAdmin」の利用規約にある通り、フッターのコピーライトは消さないで利用してください。 -->
+  <!--            消したい場合は、下記コメントに記載されているリンク先にて、利用規約の詳細が記載されているのでそちらをご確認ください。 -->
   <div th:fragment="footer">
     <footer id="footer" class="footer">
       <div class="copyright">
