--- a/bin/main/templates/profile/index.html
+++ b/bin/main/templates/profile/index.html
@@ -2,34 +2,34 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 
 <!-- ======= Head ======= -->
-<div th:replace="~{common/shoulder_fragment::head(title = 'SNSサイト - プロフィール')}"></div>
+<div th:replace="~{common/shoulder_fragment::head(title = 'Home')}"></div>
 
 <body>
 
   <!-- ======= Header ======= -->
   <div th:replace="~{common/shoulder_fragment::header}"></div>
+  
+    <div th:replace="~{common/shoulder_fragment::sidebar}"></div>
 
-  <!-- ======= Sidebar ======= -->
-  <div th:replace="~{common/shoulder_fragment::sidebar}"></div>
 
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>プロフィール</h1>
+      <h1>Home</h1>
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
+    <section class="section">
       <div class="row">
-        <div class="col-xl-8">
-          <div class="row">
+        <div class="col-lg-8">
 
-            <div class="col-lg-12">
-              <!-- Card with an image on top -->
-              <div class="card">
-                <img src="/assets/img/card.jpg" class="card-img-top" alt="...">
+          <div class="card"　th:each="post : ${postsList}">
+			                
+              <div class="card" >
+                <!-- <img src="/assets/img/card.jpg" class="card-img-top" alt="..."> -->
                 <div class="card-body">
-                  <h5 class="card-title">リラックスしてカフェタイムを楽しむ！テラスでのカフェ体験</h5>
-                  <p class="card-text">こんにちは、皆さん！今日は素晴らしいテラスでのカフェ体験についてお話ししたいと思います。最近、私は忙しい日常生活から離れるために、テラスでカフェを楽しむことを好んでいます。そこで、今回は私のおすすめのテラスカフェを紹介しつつ、リラックスしてカフェタイムを過ごす方法をご紹介します。
+					<h3 class="card-title" th:text="${post.users.name}">田中広輔</h3>
+                  <h5 class="card-title"th:text="${post.title}">リラックスしてカフェタイムを楽しむ！テラスでのカフェ体験</h5>
+                  <p class="card-text" th:text="${post.body}">こんにちは、皆さん！今日は素晴らしいテラスでのカフェ体験についてお話ししたいと思います。最近、私は忙しい日常生活から離れるために、テラスでカフェを楽しむことを好んでいます。そこで、今回は私のおすすめのテラスカフェを紹介しつつ、リラックスしてカフェタイムを過ごす方法をご紹介します。
                     <br>
                     <br>
                     私が行ったカフェは、美しい景色が見渡せるテラス席が魅力のカフェでした。テラスでコーヒーや紅茶を飲みながら、日差しを浴びていると、とてもリラックスできます。また、周りの自然の風景を見ながら、ストレスが吹き飛ぶような気分になります。
@@ -50,95 +50,49 @@
                     </div>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
-                  <form class="row g-3">
+                  <form class="row g-3" method="post" th:action="@{/profile/comment}" th:object="${requestComment}">
                     <div class="col-md-12">
-                      <input type="text" class="form-control" placeholder="コメントを入力...">
+                      <input type="text" class="form-control" placeholder="コメントを入力..." th:field="*{comment}">
+                      <input type="hidden" name="postId" th:value="${post.id}">
                     </div>
                     <div class="text-center">
                       <button type="submit" class="btn btn-primary">コメントする</button>
                     </div>
                   </form>
-                </div>
-
-                <div class="card-body">
+                  
+                  <div class="card-body">
                   <div class="news">
-                    <div class="post-item clearfix">
-                      <img src="/assets/img/news-1.jpg" alt="">
-                      <h4><a href="/profile/">前田裕司</a></h4>
-                      <p>ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。...</p>
+                    <div class="post-item clearfix" th:each="comments :${post.postCommentsList}">
+                      <h4><a th:href="@{/profile/{id}(id=${comments.users.id})}" th:text="${comments.users.name}">前田裕司</a></h4>
+                      <p th:text="${comments.comment}">ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。...</p>
+                      
                     </div>
-
-                    <div class="post-item clearfix">
-                      <img src="/assets/img/news-2.jpg" alt="">
-                      <h4><a href="/profile/">深沢雅彦</a></h4>
-                      <p>ハイビスカス香るまろやかなホットカクテルで、冬の寒さをくつろぎながら乗り切りましょう！...</p>
-                    </div>
-
-                    <div class="post-item clearfix">
-                      <img src="/assets/img/news-3.jpg" alt="">
-                      <h4><a href="/profile/">哀川涼</a></h4>
-                      <p>新しい季節を迎え、新しい門出を迎えるお客様へポール・スチュアートの特別なメニューをご用意しました。...</p>
-                    </div>
-
-                    <div class="post-item clearfix">
-                      <img src="/assets/img/news-4.jpg" alt="">
-                      <h4><a href="/profile/">奥山恵子</a></h4>
-                      <p>トライアスロンの練習は疲労をもたらします。でも習慣にしている練習をやめてしまうと、もっと体が疲労するというのです。...</p>
-                    </div>
-
-                    <div class="post-item clearfix">
-                      <img src="/assets/img/news-5.jpg" alt="">
-                      <h4><a href="/profile/">矢部将也</a></h4>
-                      <p>東京は、日中は日差しが出て少し気温が上がったように感じます...</p>
-                    </div>
+                  <!-- End sidebar recent posts-->
+                
+                     
+                    
+                      <!--
+                     <p th:text="${commentsList[0].comment}"></p>
+                 
+                     <p th:text="${commentsList}"></p>
+                     <p th:text="${postsList}"></p>
+                   -->
 
                   </div><!-- End sidebar recent posts-->
                 </div>
-              </div>
 
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Default Card</h5>
-                  <p class="card-text">先日、友人たちと初めてスノボーに行ってきました！初めての経験でしたが、とても楽しい思い出を作ることができました。
-                    <br>
-                    <br>
-                    まず、スキー場に着いた時は、山の景色に感動しました。青空と雪がとても綺麗で、息をのむほどでした。スノボーの初心者だった私は、先輩たちに丁寧にレクチャーしてもらい、スタート地点に立ちました。最初はバランスを取るのも難しかったですが、コツをつかむとスピードを出すこともできました。
-                    <br>
-                    <br>
-                    そして、ゲレンデを滑っていると、空気がとても清々しく、ストレスが吹き飛ぶようでした。周りの景色も素晴らしく、滑りながら眺める山々や木々が、心を癒してくれました。
-                    <br>
-                    <br>
-                    友人たちと一緒に滑りながら、お互いの技術を見せ合い、笑い声が絶えない1日でした。休憩時には、温かいドリンクやお菓子を楽しんだり、写真を撮ったりして、さらに楽しい時間を過ごすことができました。
-                    <br>
-                    <br>
-                    初めてのスノボーでしたが、この経験を通して新しい趣味を見つけることができました。また、自然の中で過ごすことで心身ともにリフレッシュできたので、気分もスッキリしました。次は、もっと上手に滑りたいと思いました。スノボーの楽しさに魅了され、また行きたいと思っています。
-                  </p>
-                </div>
-
-                <div class="card-body">
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <div>
-                      <i class="bi bi-exclamation-octagon me-1"></i>
-                      <span>エラーメッセージを表示します。</span>
-                    </div>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                  </div>
-                  <form class="row g-3">
-                    <div class="col-md-12">
-                      <input type="text" class="form-control" placeholder="コメントを入力...">
-                    </div>
-                    <div class="text-center">
-                      <button type="submit" class="btn btn-primary">コメントする</button>
-                    </div>
-                  </form>
-                </div>
+                
               </div>
+              <!-- End Table with stripped rows -->
+               
+
+         
+
+            	</div>
             </div>
-
-          </div>
+        
         </div>
-
-        <div class="col-xl-4">
+           <div class="col-xl-4">
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
@@ -310,7 +264,9 @@
           </div>
 
         </div>
-      </div>
+          
+          
+        </div>
     </section>
 
   </main><!-- End #main -->
