--- a/src/main/resources/templates/home/NG.html
+++ b/src/main/resources/templates/home/NG.html
@@ -61,12 +61,25 @@
                   </form>
                   
                   <div class="card-body">
-                  <div class="news">
+                   
                     <div class="post-item clearfix" th:each="comments :${post.postCommentsList}">
+						<br>
                       <h4><a th:href="@{/profile/{id}(id=${comments.users.id})}" th:text="${comments.users.name}">前田裕司</a></h4>
-                      <p th:text="${comments.comment}">ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。...</p>
+                      <p th:text="${comments.comment}">ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。..</p>
+					 
                       
-                    </div>
+                    
+                    <!-- <div class="card-footer" th:if="${post.usersId== comments.users.id}">-->
+              <!--<div class="row mb-3">
+                <div class="col-sm-4">
+                  <a th:href="@{/home/comment/delete/{postsId}/{commentsId}(postsId=${post.id}, commentsId=${comments.usersId})}" class="btn btn-danger">削除する</a>
+                </div> 
+              </div>-->
+                  <!--</div>-->
+                  </div>
+                  
+                 
+            
                   <!-- End sidebar recent posts-->
                 
                      
@@ -86,13 +99,13 @@
               <!-- End Table with stripped rows -->
                
 
-         
+          </div>
 
             	</div>
-            </div>
+            
+      </div>
         
-        </div>
-            <div class="col-lg-4">
+         <div class="col-lg-4">
 
           <div class="card">
             <div class="card-body">
@@ -135,7 +148,7 @@
           </div>
           
           
-        </div>
+        
     </section>
 
   </main><!-- End #main -->
