--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -23,12 +23,11 @@
         <div class="col-lg-8">
 
           <div class="card"　th:each="post : ${postsList}">
-
-             
-              
+			                
               <div class="card" >
                 <!-- <img src="/assets/img/card.jpg" class="card-img-top" alt="..."> -->
                 <div class="card-body">
+					<h3 class="card-title" th:text="${post.users.name}">田中広輔</h3>
                   <h5 class="card-title"th:text="${post.title}">リラックスしてカフェタイムを楽しむ！テラスでのカフェ体験</h5>
                   <p class="card-text" th:text="${post.body}">こんにちは、皆さん！今日は素晴らしいテラスでのカフェ体験についてお話ししたいと思います。最近、私は忙しい日常生活から離れるために、テラスでカフェを楽しむことを好んでいます。そこで、今回は私のおすすめのテラスカフェを紹介しつつ、リラックスしてカフェタイムを過ごす方法をご紹介します。
                     <br>
@@ -51,14 +50,35 @@
                     </div>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
-                  <form class="row g-3">
+                  <form class="row g-3" method="post" th:action="@{/home/comment}" th:object="${requestComment}">
                     <div class="col-md-12">
-                      <input type="text" class="form-control" placeholder="コメントを入力...">
+                      <input type="text" class="form-control" placeholder="コメントを入力..." th:field="*{comment}">
+                      <input type="hidden" name="postId" th:value="${post.id}">
                     </div>
                     <div class="text-center">
                       <button type="submit" class="btn btn-primary">コメントする</button>
                     </div>
                   </form>
+                  
+                  <div class="card-body">
+                  <div class="news">
+                    <div class="post-item clearfix" th:each="comments :${post.postCommentsList}">
+                      <h4><a th:href="@{/profile/{id}(id=${comments.users.id})}" th:text="${comments.users.name}">前田裕司</a></h4>
+                      <p th:text="${comments.comment}">ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。...</p>
+                      
+                    </div>
+                  <!-- End sidebar recent posts-->
+                
+                     
+                    
+                      <!--
+                     <p th:text="${commentsList[0].comment}"></p>
+                 
+                     <p th:text="${commentsList}"></p>
+                     <p th:text="${postsList}"></p>
+                   -->
+
+                  </div><!-- End sidebar recent posts-->
                 </div>
 
                 
@@ -71,7 +91,7 @@
             	</div>
             </div>
         
-          
+        </div>
             <div class="col-lg-4">
 
           <div class="card">
@@ -87,7 +107,7 @@
               </div>
 
               <!-- Vertical Form -->
-              <form class="row g-3" method="post" th:action="@{/home/post}" th:object="${requestPost}">
+              <form class="row g-3" method="post" th:action="@{/home/post}" th:object="${requestShare}">
                 <div class="col-12">
                   <label for="inputNanme4" class="form-label">タイトル</label>
                   <input type="text" name="title" class="form-control" id="inputNanme4">
@@ -109,6 +129,9 @@
               </form>
                <!-- Vertical Form -->
             </div>
+            
+           
+                </div>
           </div>
           
           
