--- a/bin/main/templates/home/index2.html
+++ b/bin/main/templates/home/index2.html
@@ -60,53 +60,41 @@
                     </div>
                   </form>
                   
-                  <div class="card-body">
-                   
+                  <div class="card-body" >
+                  <div class="news">
                     <div class="post-item clearfix" th:each="comments :${post.postCommentsList}">
-						<br>
                       <h4><a th:href="@{/profile/{id}(id=${comments.users.id})}" th:text="${comments.users.name}">前田裕司</a></h4>
-                      <p th:text="${comments.comment}">ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。..</p>
-					 
-                      
-                    
-                    <!-- <div class="card-footer" th:if="${post.usersId== comments.users.id}">-->
-              <!--<div class="row mb-3">
+                      <p th:text="${comments.comment}">ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。...</p>
+            <th:block th:if="${comments.users.id == users.id}">
+             <div class="card-footer" >
+              <div class="row mb-3">
                 <div class="col-sm-4">
-                  <a th:href="@{/home/comment/delete/{postsId}/{commentsId}(postsId=${post.id}, commentsId=${comments.usersId})}" class="btn btn-danger">削除する</a>
-                </div> 
-              </div>-->
-                  <!--</div>-->
-                  </div>
-                  
-                 
-            
-                  <!-- End sidebar recent posts-->
-                
-                     
-                    
-                      <!--
-                     <p th:text="${commentsList[0].comment}"></p>
-                 
-                     <p th:text="${commentsList}"></p>
-                     <p th:text="${postsList}"></p>
-                   -->
-
+                  <a th:href="@{/home/comment/delete/{postsId}/{commentsId}(postsId=${post.id}, commentsId=${comments.id})}" class="btn btn-danger">削除する</a>
+                </div>
+              </div>
+            </div>
+           </th:block>
+              
+                    </div>
                   </div><!-- End sidebar recent posts-->
                 </div>
-
                 
+               
+               
+            
+            
               </div>
               <!-- End Table with stripped rows -->
                
 
-          </div>
+         
 
-            	</div>
-            
-      </div>
+            </div>
+           </div>
+        </div>
+        
         
          <div class="col-lg-4">
-
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">今の気持ちをシェアしよう！</h5>
@@ -144,11 +132,11 @@
             </div>
             
            
-                </div>
+           </div>
           </div>
           
           
-        
+        </div>
     </section>
 
   </main><!-- End #main -->
