--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -21,9 +21,8 @@
     <section class="section">
       <div class="row">
         <div class="col-lg-8">
-
           <div class="card"　th:each="post : ${postsList}">
-			                
+			  			                
               <div class="card" >
                 <!-- <img src="/assets/img/card.jpg" class="card-img-top" alt="..."> -->
                 <div class="card-body">
@@ -63,7 +62,7 @@
                   <div class="card-body">
                   <div class="news">
                     <div class="post-item clearfix" th:each="comments :${post.postCommentsList}">
-                      <h4><a th:href="@{/profile/{id}(id=${comments.users.id})}" th:text="${comments.users.name}">前田裕司</a></h4>
+                      <h4><a th:href="@{/profile/{usersId}(usersId=${comments.users.id})}" th:text="${comments.users.name}">前田裕司</a></h4>
                       <p th:text="${comments.comment}">ハヤシライス、ピリ辛味噌バターコーンのスープパスタを食べてきました。...</p>
                                   <th:block th:if="${comments.users.id == users.id}">
              <div class="card-footer" >
@@ -94,7 +93,7 @@
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
               <img src="/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-              <h2>佐藤太郎</h2>
+              <h2 th:text="${usersName}">佐藤太郎</h2>
               <div class="social-links mt-2">
                 <form action="users-profile.jsp" method="post">
                   <button type="button" class="btn btn-primary rounded-pill">友達申請</button>
@@ -102,6 +101,9 @@
               </div>
             </div>
           </div>
+
+
+
 
           <div class="card">
             <div class="card-body pt-3">
