add friend and status

--- a/src/main/resources/templates/friend/list.html
+++ b/src/main/resources/templates/friend/list.html
@@ -40,37 +40,43 @@
                 <tbody>
                   
                   <tr th:each="friend : ${usersList3}">
+					  
                     <td><a th:href="@{/profile/{usersId}(usersId=${friend.id})}" th:text="${friend.name}">奥山恵子</a></td>
                     <td th:text="${friend.profile}">
                       はじめまして、奥山恵子と申します。フリーランスのイラストレーターです。センスが良く、<br>独自のスタイルを持ったイラストを制作しています。<br>クライアントからの要望に応えるため、柔軟な発想力を発揮しています。<br>趣味は絵を描くことと読書です。
                     </td>
                     	
                     <td th:if="${friend.friendsInfo != null}" th:switch="${friend.friendsInfo.status}">
+						
 						<div th:case="1">
 							<button type="button" class="btn btn-secondary rounded-pill" disabled="disabled">申請済み</button>
 						</div>
+						
 						<div th:case="2">
-							<button type="button" class="btn btn-primary rounded-pill">承認</button>
-							<button type="button" class="btn btn-danger rounded-pill">却下</button>
+							
+							<form th:action="@{/friend/list/add/{friendId}(friendId=${friend.id})}" th:object="${requestFriend}" method="post">
+								<button type="button" class="btn btn-primary rounded-pill">承認</button>
+							</form>
+							
+							</form th:action="@{/friend/list/add/{friendId}(friendId=${friend.id})}" th:object="${requestFriend}" method="post">
+								<button type="button" class="btn btn-danger rounded-pill">却下</button>
+							</form>
+							
 						</div>
+						
 						<div th:case="3">
 							<button type="button" class="btn btn-secondary rounded-pill" disabled="disabled">フレンド</button>
 						</div>
+						
 					</td>
+					
 					<td th:if="${friend.friendsInfo == null}" >
-                       <form th:action="@{/friend/add/{friendId}(friendId=${friend.id})}" th:object="${requestFriend}" method="post">
+                       <form th:action="@{/friend/list/add/{friendId}(friendId=${friend.id})}" th:object="${requestFriend}" method="post">
 							<input type="hidden" name="friendId" th:value=${friend.id}>
                 		 	    <button type="submit" class="btn btn-primary rounded-pill" name=status value="1">友達申請</button>
-                		   </for>
+                		   </form>
                     </td>
 				
-                  </tr>
-                  <tr>
-                    <td><a href="/profile/">矢部将也</a></td>
-                    <td>
-                      こんにちは、矢部将也と言います。飲食店の店長をしています。<br>お客様に対して丁寧な接客を心掛け、料理の腕も良いと評判をいただいています。<br>趣味は旅行と料理研究です。お店にもぜひお越しください！
-                    </td>
-                    <td><button type="button" class="btn btn-primary rounded-pill">未承認</button>&nbsp;<button type="button" class="btn btn-danger rounded-pill">却下</button></td>
                   </tr>
                   
                 </tbody>
