--- a/src/main/resources/templates/friend/list.html
+++ b/src/main/resources/templates/friend/list.html
@@ -35,6 +35,7 @@
                     <th scope="col">名前</th>
                     <th scope="col">プロフィール</th>
                     <th scope="col">承認ステータス</th>
+
                   </tr>
                 </thead>
                 <tbody>
@@ -50,6 +51,10 @@
 						
 						<div th:case="1">
 							<button type="button" class="btn btn-secondary rounded-pill" disabled="disabled">申請済み</button>
+							<form th:action="@{/friend/delete/{friendId}(friendId=${friend.id})}" th:object="${requestFriend}" method="post">
+								<input type="hidden" name="friendId" th:value=${friend.id}>
+								<button type="submit" class="btn btn-danger rounded-pill">申請取消</button>
+							</form>
 						</div>
 						
 						<div th:case="2">
@@ -68,6 +73,10 @@
 						
 						<div th:case="3">
 							<button type="button" class="btn btn-secondary rounded-pill" disabled="disabled">フレンド</button>
+							<form th:action="@{/friend/delete/{friendId}(friendId=${friend.id})}" th:object="${requestFriend}" method="post">
+								<input type="hidden" name="friendId" th:value=${friend.id}>
+								<button type="submit" class="btn btn-danger rounded-pill">フレンド削除</button>
+							</form>
 						</div>
 						
 					</td>
