--- a/src/main/resources/templates/home/index3.html
+++ b/src/main/resources/templates/home/index3.html
@@ -23,8 +23,12 @@
         <div class="col-lg-8">
 
           <div class="card"　th:each="post : ${postsList}">
+			  
+			  
 			                
               <div class="card" >
+				  
+				 
                 <!-- <img src="/assets/img/card.jpg" class="card-img-top" alt="..."> -->
                 <div class="card-body">
 					<h3 class="card-title" th:text="${post.users.name}">田中広輔</h3>
@@ -43,13 +47,16 @@
                 </div>
 
                 <div class="card-body">
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <div>
-                      <i class="bi bi-exclamation-octagon me-1"></i>
-                      <span>エラーメッセージを表示します。</span>
-                    </div>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                  </div>
+					  <th:block th:if="${post.users.id == users.id}">
+             <div class="card-footer" >
+              <div class="row mb-3">
+                <div class="col-sm-4">
+                  <a th:href="@{/home/post/delete/{id}/{usersId}(id=${post.id}, usersId=${post.users.id})}" class="btn btn-danger">投稿削除</a>
+                </div>
+               </div>
+              </div>
+             </th:block>
+                 
                   <form class="row g-3" method="post" th:action="@{/home/comment}" th:object="${requestComment}">
                     <div class="col-md-12">
                       <input type="text" class="form-control" placeholder="コメントを入力..." th:field="*{comment}">
@@ -69,11 +76,11 @@
              <div class="card-footer" >
               <div class="row mb-3">
                 <div class="col-sm-4">
-                  <a th:href="@{/home/comment/delete/{postsId}/{commentsId}(postsId=${post.id}, commentsId=${comments.id})}" class="btn btn-danger">削除する</a>
+                  <a th:href="@{/home/comment/delete/{postsId}/{commentsId}(postsId=${post.id}, commentsId=${comments.id})}" class="btn btn-danger">コメント削除</a>
                 </div>
+               </div>
               </div>
-            </div>
-           </th:block>
+             </th:block>
               
                     </div>
                   </div><!-- End sidebar recent posts-->
@@ -85,11 +92,15 @@
             
               </div>
               <!-- End Table with stripped rows -->
+              
+              		
+           
                
 
          
 
             </div>
+            
            </div>
         </div>
         
