--- a/src/main/resources/templates/common/shoulder_fragment.html
+++ b/src/main/resources/templates/common/shoulder_fragment.html
@@ -65,8 +65,7 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <!--/* タイムスタンプをURLパラメータに指定している理由は、更新直後ブラウザキャッシュにより表示されないことがある為、設定している。 */-->
-            <!--<img th:src="(*{users.iconUri} ? ${@storageService.getDataUri(users.iconUri)} : '/assets/img/profile-dummy.png')" alt="Profile" class="rounded-circle">-->
+            <img th:src="(*{users.iconUri} ? ${@storageService.getDataUri(users.iconUri)} : '/assets/img/profile-img.jpg')"  class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2" th:text='${users.name}'>佐藤太郎</span>
           </a><!-- End Profile Iamge Icon -->
 
