--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -165,7 +165,7 @@
                            			 	<input type="file" name="file" id="filesend" style="display: none" >
                           			  </label>
                           			  
-                          			  <a href="" class="btn btn-danger" title="Remove my profile image" onclick="resetPreview();"><i class="bi bi-trash"></i></a>
+                          			  <a href="#" class="btn btn-danger" title="Remove my profile image" onclick="resetPreview();"><i class="bi bi-trash"></i></a>
           
                       	  </div>
                         
