--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -31,7 +31,7 @@
                 <!-- <img src="/assets/img/card.jpg" class="card-img-top" alt="..."> -->
                 <div class="card-body">
 					<h3 class="card-title" th:text="${post.users.name}">田中広輔</h3>
-                  <h5 class="card-title"th:text="${post.title}">リラックスしてカフェタイムを楽しむ！テラスでのカフェ体験</h5>
+                  <h5 th:id="|comment_${post.id}|" class="card-title"th:text="${post.title}">リラックスしてカフェタイムを楽しむ！テラスでのカフェ体験</h5>
                   <p class="card-text" th:text="${post.body}">こんにちは、皆さん！今日は素晴らしいテラスでのカフェ体験についてお話ししたいと思います。最近、私は忙しい日常生活から離れるために、テラスでカフェを楽しむことを好んでいます。そこで、今回は私のおすすめのテラスカフェを紹介しつつ、リラックスしてカフェタイムを過ごす方法をご紹介します。
                     <br>
                     <br>
@@ -55,6 +55,14 @@
                </div>
               </div>
              </th:block>
+             
+              <div role="alert" class="alert alert-danger alert-dismissible fade show" th:if="${commentsValidationError != null && commentsValidationError.containsKey(post.id)}">
+						  <div  th:each="error :  ${commentsValidationError.get(post.id).getAllErrors()}">
+                   	  			<i class="bi bi-exclamation-octagon me-1"></i>
+                    	  		<span th:text="${error.getDefaultMessage()}">エラーメッセージを表示します。</span>
+                    	  	</div>
+                    	  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                   		</div>
                   
                   <form class="row g-3" method="post" th:action="@{/profile/comment}" th:object="${requestComment}">
                     <div class="col-md-12">
@@ -91,7 +99,7 @@
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-            	<img th:src="(*{users.iconUri} ? ${@storageService.getDataUri(users.iconUri)} : '/assets/img/profile-dummy.png')"  class="rounded-circle" style="width: 120px;">
+            	<img th:src="(*{users.iconUri} ? ${@storageService.getDataUri(users.iconUri)} : '/assets/profileimg/profile-dummy.png')"  class="rounded-circle" style="width: 120px;">
              	<h2 th:text="${usersName}">佐藤太郎</h2>
               <div class="social-links mt-2">
 			     <th:block th:if="${usersId != loginId && usersId != null}">
@@ -103,24 +111,51 @@
               	
           	  </div>
           </div>
+          
+           <div role="alert" class="alert alert-danger alert-dismissible fade show" th:if="${validationError != null}">
+						  <div  th:each="error :  ${validationError}">
+                   	  			<i class="bi bi-exclamation-octagon me-1"></i>
+                    	  		<span th:text="${error}">エラーメッセージを表示します。</span>
+                    	  	</div>
+                    	  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                   		</div>
+                   		
+               	 <div role="alert" class="alert alert-danger alert-dismissible fade show" th:if="${passwordValidationError != null}">
+						  <div  th:each="error :  ${passwordValidationError}">
+                   	  			<i class="bi bi-exclamation-octagon me-1"></i>
+                    	  		<span th:text="${error}">エラーメッセージを表示します。</span>
+                    	  	</div>
+                    	  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                   		</div>
 
           <div class="card">
             <div class="card-body pt-3">
               <!-- Bordered Tabs -->
+              
+              
               <ul class="nav nav-tabs nav-tabs-bordered">
+				  
+				  
 
                 <li class="nav-item">
                   <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">基本データ</button>
                 </li>
                 
+                
+                
                 <li class="nav-item">
-                  <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">プロフィール編集</button>
+                  <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit" >プロフィール編集</button>
                 </li>
+                
+                
+                
       
                 <li class="nav-item">
                   <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">パスワード変更</button>
                 </li>
               </ul>
+              
+              
               <div class="tab-content pt-2">
 
                 <div class="tab-pane fade show active profile-overview" id="profile-overview">
@@ -148,7 +183,12 @@
 
                 </div>
 
-                <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
+                <div class="tab-pane fade profile-edit pt-3" id="profile-edit" name="profile-edit">
+					
+					 
+                    
+                 
+                  
                  
                   <form method="post" enctype="multipart/form-data" th:action="@{/profile/edit}" novalidate th:object="${editProfile}"> 
 				　
@@ -162,7 +202,7 @@
                          <div class="pt-2">
                          			 <label>                      				
 										 <span class="btn btn-primary btn-sm" title="Upload new profile image"> <i class="bi bi-upload btn btn-primary btn-sm"></i></span>
-                           			 	<input type="file" name="file" id="filesend" style="display: none" >
+                           			 	<input type="file" name="file" id="filesend" style="display: none" th:value="${users.iconUri}">
                           			  </label>
                           			  
                           			  <a href="#" class="btn btn-danger" title="Remove my profile image" onclick="resetPreview();"><i class="bi bi-trash"></i></a>
@@ -175,7 +215,7 @@
                     <div class="row mb-3">
                       <label for="fullName" class="col-md-4 col-lg-4 col-form-label">名前</label>
                       <div class="col-md-8 col-lg-8">
-                        <input name="name" type="text" class="form-control" id="fullName">
+                        <input name="name" type="text" class="form-control" id="fullName" th:value="${users.name}" required="required">
 						<!-- <input name="fullname" type="text" class="form-control" id="fullName" th:field="*{name}"> -->
 
                       </div>
@@ -184,7 +224,7 @@
                     <div class="row mb-3">
                       <label for="about" class="col-md-4 col-lg-4 col-form-label">自己紹介</label>
                       <div class="col-md-8 col-lg-8">
-                        <textarea name="profile" class="form-control" id="about" style="height: 100px"></textarea>
+                        <input name="profile" class="form-control" id="about" th:value="${users.profile}" required="required">
                         <!-- <textarea name="about" class="form-control" id="about" style="height: 100px" th:field="*{profile}"></textarea> -->
 
                       </div>
@@ -193,7 +233,7 @@
                     <div class="row mb-3">
                       <label for="Email" class="col-md-4 col-lg-4 col-form-label">メールアドレス</label>
                       <div class="col-md-8 col-lg-8">
-                        <input name="email" type="email" class="form-control" id="Email" >
+                        <input name="email" type="email" class="form-control" id="Email" th:value="${users.email}" required="required">
                       <!--    <input name="email" type="email" class="form-control" id="Email" th:field="*{emailAddress}"> -->
 
                       </div>
@@ -202,7 +242,7 @@
                     <div class="row mb-3">
                       <label for="Email" class="col-md-4 col-lg-4 col-form-label">ログインID</label>
                       <div class="col-md-8 col-lg-8">
-                        <input name="loginId" type="email" class="form-control" id="login_Id" >
+                        <input name="loginId" type="email" class="form-control" id="login_Id" th:value="${users.loginId}" required="required">
                       <!--    <input name="email" type="email" class="form-control" id="Email" th:field="*{emailAddress}"> -->
 
                       </div>
@@ -219,26 +259,33 @@
                  
 
                   <!-- Change Password Form -->
+                  
+                  
+                
+                
                   <form method="post" th:action="@{/profile/password}" novalidate th:object="${editPassword}">
                     <div class="row mb-3">
                       <label for="currentPassword" class="col-md-4 col-lg-4 col-form-label">現在のパスワード</label>
                       <div class="col-md-8 col-lg-8">
                         <input name="password" type="password" class="form-control" id="currentPassword">
                       </div>
+                        <div class="invalid-feedback">パスワードを入力してください。</div>
                     </div>
 
                     <div class="row mb-3">
                       <label for="newPassword" class="col-md-4 col-lg-4 col-form-label">新しいパスワード</label>
                       <div class="col-md-8 col-lg-8">
-                        <input name="newpassword" type="password" class="form-control" id="newPassword">
+                        <input name="newpassword1" type="password" class="form-control" id="newPassword1">
                       </div>
+                        <div class="invalid-feedback">パスワードを入力してください。</div>
                     </div>
 
                     <div class="row mb-3">
                       <label for="renewPassword" class="col-md-4 col-lg-4 col-form-label">新しいパスワードを再入力</label>
                       <div class="col-md-8 col-lg-8">
-                        <input name="renewpassword" type="password" class="form-control" id="renewPassword">
+                        <input name="newpassword2" type="password" class="form-control" id="newPassword2">
                       </div>
+                        <div class="invalid-feedback">パスワードを入力してください。</div>
                     </div>
 
                     <div class="text-center">
